--- a/src/default.conf
+++ b/src/default.conf
@@ -1,16 +1,31 @@
-fork=true   ## 允许程序在后台运行
+## 允许程序在后台运行
+fork=true   
+
+## 开始认证
 auth = true
-#auth=true  ## 开始认证
+
+# 日志存放目录
 logpath=/data/db/mongodb/logs/mongodb.log   
-logappend=true      # 写日志的模式：设置为true为追加。默认是覆盖
-dbpath=/data/db/mongodb/data/    ## 数据存放目录
-pidfilepath=/data/db/mongodb/logs/mongodb.pid    # 进程ID，没有指定则启动时候就没有PID文件。默认缺省。
+
+# 写日志的模式：设置为true为追加。默认是覆盖
+logappend=true
+
+## 数据存放目录
+dbpath=/data/db/mongodb/data/    
+
+# 进程ID，没有指定则启动时候就没有PID文件。默认缺省。
+# pidfilepath=/data/db/mongodb/logs/mongodb.pid
+
+# 端口号
 port=27017
-#bind_ip=192.168.2.73   # 绑定地址。默认127.0.0.1，只能通过本地连接
+
+# 绑定地址。默认127.0.0.1，只能通过本地连接
+# bind_ip=192.168.2.73
+
 # 设置为true，修改数据目录存储模式，每个数据库的文件存储在DBPATH指定目录的不同的文件夹中。
 # 使用此选项，可以配置的MongoDB将数据存储在不同的磁盘设备上，以提高写入吞吐量或磁盘容量。默认为false。
 # 建议一开始就配置次选项
-directoryperdb=true
+# directoryperdb=true
 
 # 禁止日志 
 # 对应 journal 启用操作日志，以确保写入持久性和数据的一致性，会在dbpath目录下创建journal目录
